[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
name = "keylight"
authors = ["andornaut <andornaut@users.noreply.github.com>"]
description = "A CLI to control an Elgato Key Light"
version = "0.2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
leglight = "^0.2.0"
typer = "^0.26.7"

[tool.poetry.scripts]
keylight = "keylight.main:main"

[tool.poetry.group.dev.dependencies]
ruff = "0.15.20"

[tool.ruff]
line-length = 120
