[metadata]
name = keylight
version = 0.1.0
url = https://github.com/andornaut/keylight
license_files = LICENSE
author = andornaut
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = A CLI to control an Elgato Key Light
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.6
install_requires =
    leglight == 0.2.0

[options.entry_points]
console_scripts =
    keylight = keylight.main:main
